# recon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SFM4OSX.md  boost.cmake  gen_points.py  helloworld.cpp  qt5.cmake
.abandoned/app/: CMakeLists.txt  Info.plist
.abandoned/app/src/: Main.qrc  SFMWorker.cpp  SFMWorker.h
.abandoned/visualsfm/: CMakeLists.txt
abandoned/app/: CMakeLists.txt  ImageGridView.qml
abandoned/core/: CMakeLists.txt
abandoned/core/include/Recon/: Camera.h  FileSet.h  ImageSet.h  SFMContext.h
abandoned/core/src/: NVMLoader.cpp  SFMContext.cpp
app/: CMakeLists.txt  CameraCalibrationPage.qml  ImageGridView.qml  ImportImagePage.qml  Main.cpp  Main.qrc  MainView.qml  MainWindow.qml  SFMProcessPage.qml
app/src/: ChooseImagePage.qml  Main.cpp  MainView.qml  MainWindow.qml  SFMWorker.cpp  SFMWorker.h
core/: CMakeLists.txt
core/include/Recon/: Document.h  ImageListModel.h  ImageSet.h  SFMContext.h  SFMWorker.h
core/src/: Camera.cpp  Document.cpp  FileSet.cpp  ImageListModel.cpp  ImageSet.cpp  SFMContext.cpp  SFMWorker.cpp
framework/: Bundle.cpp  Bundle.h  CMakeLists.txt  Camera.h
framework/include/: Bundle.h  Camera.h
framework/include/Recon/: Bundle.h  Camera.h  NVMLoader.h  SFMWorker.h
framework/sce_vectormath/: CMakeLists.txt
framework/src/: Bundle.cpp  Camera.cpp  Document.cpp  SFMWorker.cpp
gfxmath/: CMakeLists.txt
gfxmath/simdmath/: CMakeLists.txt
gfxmath/simdmath/include/: simdmath.h
gfxmath/simdmath/include/simdmath/: combine3f4.h  copywf4.h  copyxf4.h  copyyf4.h  copyzf4.h  crossf4.h  dot3f4.h  dot4f4.h  fabsf4.h  fmaxf4.h  fminf4.h  negatef4.h
gfxmath/simdmath/include/simdmath/neon/: _vec_utils.h
gfxmath/simdmath/include/simdmath/sse/: _vec_utils.h
gfxmath/simdmath/src/c/: absi4.c  acosf4.c  asinf4.c  atan2f4.c  atanf4.c  cbrtf4.c  ceild2.c  ceilf4.c  copysignd2.c  copysignf4.c  cosd2.c  cosf4.c  divd2.c  divf4.c  divi4.c  divu4.c  exp2f4.c  expf4.c  expm1f4.c  fabsd2.c  fabsf4.c  fdimd2.c  fdimf4.c  floord2.c  floorf4.c  fmad2.c  fmaf4.c  fmaxd2.c  fmaxf4.c  fmind2.c  fminf4.c  fmodd2.c  fmodf4.c  fpclassifyd2.c  fpclassifyf4.c  frexpd2.c  frexpf4.c  hypotd2.c  hypotf4.c  ilogbd2.c  (+79 more)
gfxmath/simdmath/src/sse/simdmath/: acosf4.h  ceilf4.h  copysignf4.h  cosf4.h  divf4.h  floorf4.h  fmaf4.h  recipf4.h  rsqrtf4.h  sincosf4.h  sinf4.h  sqrtf4.h  tanf4.h  truncf4.h
gfxmath/simdmath/test/: CMakeLists.txt
gfxmath/simdmath/test/src/: sincos.cpp  tan.cpp  test_helper.h
gfxmath/vectormath/: CMakeLists.txt
gfxmath/vectormath/include/: vectormath.h
gfxmath/vectormath/include/vectormath/aos/: data_types.h  mat4.h  quat.h  scalar.h  vec4.h
gfxmath/vectormath/include/vectormath/aos/utils/: aabox.h  frustum.h  plane.h  point3.h  ray3.h  sphere.h  transform.h
gfxmath/vectormath/include/vectormath/soa/: data_types.h  load_store.h
gfxmath/vectormath/test/: CMakeLists.txt
gfxmath/vectormath/test/aos/: CMakeLists.txt  dualquat.cpp  mat3.cpp  mat4.cpp  quat.cpp  scalar.cpp  simd.cpp  test_helper.h  vec3.cpp  vec4.cpp
gfxmath/vectormath/test/aos_utils/: CMakeLists.txt  aabox.cpp  frustum.cpp  plane.cpp  point3.cpp  ray3.cpp  sphere.cpp  test_helper.h  transform.cpp
gfxmath/vectormath/test/soa/: CMakeLists.txt  test_helper.h  vec3.cpp  vec4.cpp
pfskel/Common/: dynamicArray.h  skeleton.cpp  skeleton.h
segmentation/src/: fileio.hpp  main.cpp  marchingcube.cpp  marchingcube.hpp  maxflow.cpp  mygraph.cpp  mygraph.hpp  slic.cpp  slic.hpp  util.cpp  util.hpp  visualhull.cpp  visualhull.hpp  voxel.cpp  voxel.hpp
shader/: bundle_feature.frag  bundle_feature.vert
src/: Bundle.cpp  Bundle.h  CMakeLists.txt  MainWindow.ui  OpenGLWindow.cpp  OpenGLWindow.h  helloworld.cpp
vlfeat/: CMakeLists.txt
voxel/: CMakeLists.txt
voxel/gridcut/: CMakeLists.txt
voxel/include/recon/: AABox.h  BuildGraph.h  Camera.h  Correlation.h  Debug.h  GraphCut.h  ModelBuilder.h  Skeleton.h  VisualHull.h  VoxelModel.h  numerical_method.h
voxel/include/vectormath/: utils.h
voxel/include/vectormath/aos/utils/: ray.h
voxel/include/vectormath/utils/: AABox.h  Frustum.h  Plane.h  Transform.h
voxel/old/: PlaneSweep.cpp  PlaneSweep.h  VoxelModel.cpp  VoxelModel.h  main.cpp
voxel/old/vectormath/aos/utils/: ray.h
voxel/rply/: CMakeLists.txt
voxel/src/: AABB.h  BuildGraph.cpp  BuildGraphOld.cpp  Camera.cpp  CameraData.h  CameraLoader.cpp  CameraLoader.h  Correlation.h  Debug.cpp  Debug.h  Epipolar.h  Epipolar2.h  GraphCut.cpp  GraphCut.h  ModelBuilder.cpp  OctreeBuilder.cpp  OctreeBuilder.h  PhotoConsistency.cpp  PhotoConsistency.h  Skeleton.cpp  VisualHull.cpp  VisualHull.h  VoxelBlock.cpp  VoxelBlock.h  VoxelColoring.cpp  VoxelColoring.h  VoxelData.h  VoxelModel.cpp  VoxelModel.h  VoxelScore1.cpp  VoxelScore1.h  VoxelScore2.h  main.cpp  morton_code.cpp  morton_code.h  numerical_method.cpp
voxel/tools/: CMakeLists.txt  build-graph.cpp  compute-weight.cpp  dump-data.cpp  main.cpp  ncc-curve.cpp  ncc-curve.gnuplot  ncc-curve.py  ncc-map.cpp  ncc_test.cpp  optimize.cpp  planexz.py  proj_test.cpp  repair.cpp  run-graphcut.py  score_test.cpp  skeleton.cpp  vishull.cpp  vote_test.cpp  vote_vis.cpp
voxel/trimesh2/: CMakeLists.txt
voxel/trimesh2/src/: TriMesh_io.cc
